k8s/mapwatch.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mapwatch-py
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mapwatch-py
  template:
    metadata:
      labels:
        app: mapwatch-py
    spec:
      containers:
        - name: app
          image: ghcr.io/teochenglim/mapwatch-py:v1
          ports:
            - containerPort: 8000
        - name: nginx
          image: nginx:1.27-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
          readinessProbe:
            httpGet:
              path: /department/mapwatch-py/
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10

      volumes:
        - name: nginx-conf
          configMap:
            name: mapwatch-nginx

---
apiVersion: v1
kind: Service
metadata:
  name: mapwatch-py
spec:
  selector:
    app: mapwatch-py
  ports:
    - port: 80
      targetPort: 80
