k8s/tilemap.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tilemap-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tilemap-server
  template:
    metadata:
      labels:
        app: tilemap-server
    spec:
      containers:
        - name: tilemap-server
          image: ghcr.io/teochenglim/mapwatch-py/tilemap-server:v1
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: tilemap-server
spec:
  selector:
    app: tilemap-server
  ports:
    - port: 80
      targetPort: 80
